--- a/index.html
+++ b/index.html
@@ -65,33 +65,43 @@
                                 <a href="#" class="nav-link">
                                     Solutions
                                 </a>
-                                <ul class="dropdown-menu">
-                                    <li class="nav-item">
-                                        <a href="https://www.techtammina.com/insurance-policy-checking/" class="nav-link">
-                                            Insurance Policy Checking
-                                        </a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="https://techtammina.com/policy-issuance-rating-engine/" class="nav-link">
-                                            Policy Issuance & Rating Engine
-                                        </a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="https://www.techtammina.com/appian-managed-services/" class="nav-link">
-                                            Appian Managed Services
-                                        </a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="https://techtammina.com/tammina-business-operations-suite/" class="nav-link">
-                                            Business Operations Suite
-                                        </a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="https://www.techtammina.com/invoice-automation/" class="nav-link">
-                                            Invoice Automation
-                                        </a>
-                                    </li>
-                                </ul>
+                                    <ul class="dropdown-menu">
+                                        <li class="nav-item">
+                                            <a href="https://www.techtammina.com/insurance-policy-checking/" class="nav-link">
+                                                Insurance Policy Checking
+                                            </a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a href="https://techtammina.com/policy-issuance-rating-engine/" class="nav-link">
+                                                Policy Issuance & Rating Engine
+                                            </a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a href="https://www.techtammina.com/appian-managed-services/" class="nav-link">
+                                                Appian Managed Services
+                                            </a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a href="https://techtammina.com/tammina-business-operations-suite/" class="nav-link">
+                                                Business Operations Suite
+                                            </a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a href="https://www.techtammina.com/invoice-automation/" class="nav-link">
+                                                Invoice Automation
+                                            </a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a href="https://www.techtammina.com/appian-intelligent-recruitment-process/" class="nav-link">
+                                                Intelligent Recruitment Process
+                                            </a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a href="https://www.techtammina.com/appian-university-admissions-management-system/" class="nav-link">
+                                                University Admission Management System
+                                            </a>
+                                        </li>
+                                    </ul>
                             </li>
 
                             <li class="nav-item">
@@ -156,9 +166,7 @@
                                 <a href="#" class="nav-link">
                                     Technologies
                                 </a>
-                                <ul class="d-flex dropdown-menu">
-                                    <div class="w-100">
-                                        <ul class="footer-list footer-list-line">
+                                <ul class="dropdown-menu">
                                             <li>
                                                 <a href="https://www.techtammina.com/appian/">Appian</a>
                                             </li>
@@ -189,8 +197,6 @@
                                             <li>
                                                 <a href="https://www.techtammina.com/mendix/">.Net</a>
                                             </li>
-                                        </ul>
-                                    </div>
                                 </ul>
                             </li>
 
@@ -439,7 +445,7 @@
                                 <img class="rectangle-11" src="./assets/img/Rectangle 11.svg" alt="">
                             </div>
                             <div class="w-75">
-                                <p>
+                                <p class="text-white">
                                     Without COE, the team spends an average of 20 percent overtime each week. The error rate is also presumably high along with low employee morale.
                                 </p>
                             </div>
@@ -455,7 +461,7 @@
                                 <img class="rectangle-11" src="./assets/img/Rectangle 11.svg" alt="">
                             </div>
                             <div class="w-75">
-                                <p class="text-ju">
+                                <p class="text-ju text-white">
                                     The processes are fully optimized and automated in automation COE. This makes the employee morale go up and reduces the turnaround time to completion by 10 percent.
                                 </p>
                             </div>
@@ -642,7 +648,7 @@ creating products
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4 col-md-12">
                     <div>
                         <img class="round-img" src="assets/CEO/Service-line.svg" alt="round-img">
                     </div>
@@ -663,7 +669,7 @@ creating products
                     class="global-value-two"> and is projected to hit</span></h2>
                    
             <h2 class="global-increase"><span class="global-value-two">USD 3,180.8 million by 2030,</span>
-            <h2 class="global-increase">growing at a CAGR of<span class="global-value-two"> 30.3%.</span>
+            <h2 class="global-increase">growing at a CAGR of<span class="global-value-two"> 30.3%</span>
             </h2>
         </div>
     </div>
@@ -786,7 +792,7 @@ Our Automation CoE lies in orchestrating people, technology, and data in a singl
               
                         <div class="w-auto">
                             <div class="row" style="padding: 50px 5px;">
-                                <div class="col-md-6 items-cards d-grid-align">
+                                <div class="col-md-5 items-cards d-grid-align">
                                     <div class="row mb-5">
                                         <div class="col-md-5 text-right px-0">
                                             <img src="assets/TAMS imgs/Vector (5).svg">
@@ -817,7 +823,7 @@ Our Automation CoE lies in orchestrating people, technology, and data in a singl
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-6 form-card mt-5">
+                                <div class="col-md-7 form-card mt-5">
                                     <div>
                                         <div class="REGISTER-text">
                                             <h4>EMBRACE DIGITAL AUTOMATION & INNOVATION!</h4>
