Changes are done for solutions drop down menu.

--- a/index.html
+++ b/index.html
@@ -65,43 +65,67 @@
                                 <a href="#" class="nav-link">
                                     Solutions
                                 </a>
-                                    <ul class="dropdown-menu">
-                                        <li class="nav-item">
-                                            <a href="https://www.techtammina.com/insurance-policy-checking/" class="nav-link">
-                                                Insurance Policy Checking
-                                            </a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="https://techtammina.com/policy-issuance-rating-engine/" class="nav-link">
-                                                Policy Issuance & Rating Engine
-                                            </a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="https://www.techtammina.com/appian-managed-services/" class="nav-link">
-                                                Appian Managed Services
-                                            </a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="https://techtammina.com/tammina-business-operations-suite/" class="nav-link">
-                                                Business Operations Suite
-                                            </a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="https://www.techtammina.com/invoice-automation/" class="nav-link">
-                                                Invoice Automation
-                                            </a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="https://www.techtammina.com/appian-intelligent-recruitment-process/" class="nav-link">
-                                                Intelligent Recruitment Process
-                                            </a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a href="https://www.techtammina.com/appian-university-admissions-management-system/" class="nav-link">
-                                                University Admission Management System
-                                            </a>
-                                        </li>
-                                    </ul>
+                                <ul class="dropdown-menu" style="width: 326px;">
+                                    <li class="nav-item">
+                                        <a href="https://www.techtammina.com/insurance-policy-checking/"
+                                            class="nav-link">
+                                            Insurance Policy Checking
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="https://techtammina.com/policy-issuance-rating-engine/"
+                                            class="nav-link">
+                                            Policy Issuance & Rating Engine
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="https://www.techtammina.com/invoice-automation/"
+                                            class="nav-link">
+                                            Invoice Automation
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="https://www.techtammina.com/appian-managed-services/"
+                                            class="nav-link">
+                                            Appian Managed Services
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="https://www.techtammina.com/appian-reusable-components/"
+                                            class="nav-link">
+                                            Appian Reusable Components
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="https://www.techtammina.com/automation-center-of-excellence/"
+                                            class="nav-link">
+                                            Automation Center of Excellence
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="https://www.techtammina.com/appian-intelligent-recruitment-process/"
+                                            class="nav-link">
+                                            Intelligent Recruitment Process
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="https://techtammina.com/tammina-business-operations-suite/"
+                                            class="nav-link">
+                                            Business Operations Suite
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="https://www.techtammina.com/appian-university-admissions-management-system/" class="nav-link">
+                                            University Admission Management System
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="https://www.techtammina.com/complaint-board/"
+                                            class="nav-link">
+                                            Complaint Board 
+                                        </a>
+                                    </li>
+                                </ul>
                             </li>
 
                             <li class="nav-item">
@@ -437,7 +461,7 @@
                 </div>
             </div>
             <div class="card-flex mx-0">
-                <div class="col-md-12 col-lg-6 card card-align">
+                <div class="col-md-12 col-lg-6 card card-align mb-2">
                     <div class="mx-auto py-2" style="font-size:18px">
                         <div class="d-flex align-items-center d-gap">
                             <div class="w-25 card-content">
