--- a/index.html
+++ b/index.html
@@ -135,12 +135,22 @@
                                 <ul class="dropdown-menu">
                                     <li class="nav-item">
                                         <a href="https://www.techtammina.com/bpm/" class="nav-link">
-                                            BPM
+                                            Business Process Management
                                         </a>
                                     </li>
                                     <li class="nav-item">
                                         <a href="https://www.techtammina.com/rpa/" class="nav-link">
-                                            RPA
+                                            Robotic Process Automation
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="https://www.techtammina.com/intelligent-document-processing/" class="nav-link">
+                                             Intelligent Document Processing
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="https://www.techtammina.com/24-7-managed-services/" class="nav-link">
+                                            24*7 Managed Services
                                         </a>
                                     </li>
                                     <li class="nav-item">
@@ -259,7 +269,7 @@
 
                                     <li class="nav-item">
                                         <a href="https://www.techtammina.com/industries/#Utilities" class="nav-link">
-                                            utilities
+                                            Utilities
                                         </a>
                                     </li>
                                 </ul>
